# ai-research-project-generator

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  RESTRUCTURING_SUMMARY.md  ROADMAP.md  SECURITY.md  academic_search.py  ai_enhanced_research_project.md  ai_research_project_generator.py  algorithms_patterns_report.md  cisco_research.md  cisco_research_request.json  cisco_research_response.json  example_project.md  llm_provider.py  main.py  pyproject.toml  research_engine.py  subject_analyzer.py  validation_engine.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  dspy-optimization.yml  release.yml  security.yml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  exceptions.py  retry.py
app/optimization/: __init__.py  dspy_modules.py  run_optimization.py
app/schemas/: __init__.py  research.py
app/services/: __init__.py  research_service.py
app/workflows/: __init__.py  agents.py  research_workflow.py
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md  REPORT_SYNTHESIS_REVIEW.md  ROADMAP.md  TECHNOLOGY_RECOMMENDATIONS.md
docs/ai/: AI_ENABLEMENT.md  AI_ENABLEMENT_REPORT.md
docs/development/: CI_TROUBLESHOOTING.md  CONTRIBUTING.md  GITHUB_SECURITY_SCANNING.md  LINTING_AND_SECURITY.md  QUICK_FIX_GUIDE.md  README.md  SECURITY_FIXES_LOG.md
scripts/: bulk_ingest.py  run_dspy_optimization.py
src/ai_research_generator/: __init__.py
src/ai_research_generator/agents/: __init__.py
src/ai_research_generator/api/: __init__.py  main.py  routes.py
src/ai_research_generator/cache/: __init__.py  data_cache.py  semantic_cache.py
src/ai_research_generator/core/: __init__.py  config.py  exceptions.py  retry.py
src/ai_research_generator/legacy/: __init__.py  academic_search.py  ai_research_project_generator.py  llm_provider.py  main.py  research_engine.py  subject_analyzer.py  validation_engine.py
src/ai_research_generator/models/: __init__.py
src/ai_research_generator/models/schemas/: __init__.py  research.py
src/ai_research_generator/optimization/: __init__.py  run_optimization.py
src/ai_research_generator/rag/: __init__.py  rag_service.py
src/ai_research_generator/services/: __init__.py  research_service.py
src/ai_research_generator/templates/: __init__.py  base.py  healthcare.py  investment.py  manager.py  technology.py
src/ai_research_generator/tools/: __init__.py  citation_manager.py  current_events.py  economic_data.py  google_scholar.py  research_tools.py
src/ai_research_generator/workflows/: __init__.py  agents.py  multi_stage_workflow.py  research_workflow.py
tests/: __init__.py  test_api.py  test_contracts.py  test_evaluation.py  test_golden_set.py  test_llm_responses.py  test_performance.py  test_retry.py  test_schemas.py  test_templates.py  test_tools.py  test_workflow.py
tests/golden_sets/default/: .gitkeep
