[project]
name = "ai-research-project-generator"
version = "2.2.0"
description = "A comprehensive solution for generating robust research projects using AI with LangGraph workflows, PydanticAI agents, and multi-source academic search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Research Project Generator Contributors"}
]
maintainers = [
    {name = "AI Research Project Generator Contributors"}
]
keywords = [
    "research",
    "ai",
    "academic",
    "systematic-review",
    "methodology",
    "langgraph",
    "pydantic-ai",
    "llm",
    "ollama",
    "citation-management",
    "google-scholar",
    "literature-review"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7.0",
    "typing-extensions>=4.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # LLM Orchestration
    "pydantic-ai>=0.0.49",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Observability
    "langsmith>=0.1.0",
    # Prompt Optimization
    "dspy>=2.5.0",
    # LLM Evaluation
    "deepeval>=1.0.0",
    "scholarly>=1.7.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/devin-patterson/ai-research-project-generator"
Documentation = "https://github.com/devin-patterson/ai-research-project-generator#readme"
Repository = "https://github.com/devin-patterson/ai-research-project-generator.git"
Issues = "https://github.com/devin-patterson/ai-research-project-generator/issues"
Changelog = "https://github.com/devin-patterson/ai-research-project-generator/blob/main/docs/CHANGELOG.md"

[project.scripts]
research-generator = "src.ai_research_generator.legacy:legacy_main"
ai-research-api = "src.ai_research_generator.api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_research_generator"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
python_files = "test_*.py"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert warnings in tests

[tool.coverage.run]
source = ["src", "llm_provider", "academic_search"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
